unpackaged/main/default/objects/Agency_MasterGroups__c/Agency_MasterGroups__c.object-meta.xml
<CustomObject>
    <description>This object is used to create  a many to many relationship between Groups and Agencies.</description>
    <label>Agency/Master Group</label>
    <nameField>
        <displayFormat>AP-{000}</displayFormat>
        <label>Agency/Masters Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Agencies/Master Groups</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>