unpackaged/main/default/objects/Agency_MasterGroups__c/fields/Agency_Master_Key__c.field-meta.xml
<CustomField>
    <fullName>Agency_Master_Key__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>Agency/Master Key</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>