unpackaged/main/default/objects/Agency_MasterGroups__c/fields/Agency_Type__c.field-meta.xml
<CustomField>
    <fullName>Agency_Type__c</fullName>
    <formula>TEXT( Broker_Agency__r.Type )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Agency Type</label>
    <type>Text</type>
</CustomField>