unpackaged/main/default/objects/Agency_MasterGroups__c/fields/Broker_Agency__c.field-meta.xml
<CustomField>
    <fullName>Broker_Agency__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Broker Agency</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Account record type must be an Agency</errorMessage>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Agency</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Master Groups</relationshipLabel>
    <relationshipName>Broker_Agency</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>