unpackaged/main/default/objects/Agency_MasterGroups__c/fields/Group_Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>Group_Effective_Date__c</fullName>
    <formula>Master_Group__r.Group_Effective_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Group Effective Date</label>
    <type>Date</type>
</CustomField>