unpackaged/main/default/objects/Agency_MasterGroups__c/fields/Group_Size__c.field-meta.xml
<CustomField>
    <fullName>Group_Size__c</fullName>
    <formula>Master_Group__r.Group_Size__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Group Size</label>
    <type>Text</type>
</CustomField>