unpackaged/main/default/objects/Agency_MasterGroups__c/fields/Master_Group__c.field-meta.xml
<CustomField>
    <fullName>Master_Group__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Master Group</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Record Type must be Master Group</errorMessage>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Master Group</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Broker Agencies (Group)</relationshipLabel>
    <relationshipName>Master_Group</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>