unpackaged/main/default/objects/Agency_MasterGroups__c/fields/Master_Group_BCBS__c.field-meta.xml
<CustomField>
    <fullName>Master_Group_BCBS__c</fullName>
    <formula>Master_Group__r.Primary_BCBS_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Master Group BCBS</label>
    <type>Text</type>
</CustomField>