unpackaged/main/default/objects/Agency_MasterGroups__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Broker_Agency__c</columns>
    <columns>Agency_Type__c</columns>
    <columns>Master_Group__c</columns>
    <columns>Group_Name__c</columns>
    <columns>Group_Size__c</columns>
    <columns>Group_Anniversary_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>