unpackaged/main/default/objects/Agency_MasterGroups__c/listViews/Created_by_User.listView-meta.xml
<ListView>
    <fullName>Created_by_User</fullName>
    <columns>NAME</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATEDBY_USER</field>
        <operation>notEqual</operation>
        <value>edi</value>
    </filters>
    <label>Created by User</label>
</ListView>